# Multi-agent-Inspection-System

./: .env.example  .gitignore  README.md  pyproject.toml  test.py
examples/: run_inspection.py
src/inspection_system/: __init__.py  openai_client.py  pipeline.py  schemas.py
src/inspection_system/agents/: __init__.py  base.py  defect_detection.py  reinspection.py  risk_alert.py  scene_analysis.py
